// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser should render correctly with just a title 1`] = `
<Teaser
  details=""
  location=""
  subTitle=""
  title="some title"
>
  <p
    className="Teaser"
  >
    <span
      className="Teaser__titleLine"
    >
      <Text
        className="Teaser__title"
        context="brand"
        inline={true}
        size="normal"
        title="some title"
      >
        <span
          className="Text--context_brand Teaser__title"
          title="some title"
        >
          some title
        </span>
      </Text>
    </span>
  </p>
</Teaser>
`;

exports[`Teaser should render with all props defined 1`] = `
<Teaser
  details="details about this job"
  location="location"
  subTitle="Organization"
  title="A job title"
>
  <p
    className="Teaser"
  >
    <span
      className="Teaser__titleLine"
    >
      <Text
        className="Teaser__title"
        context="brand"
        inline={true}
        size="normal"
        title="A job title"
      >
        <span
          className="Text--context_brand Teaser__title"
          title="A job title"
        >
          A job title
        </span>
      </Text>
      <Text
        className="Teaser__location"
        context="muted"
        inline={true}
        size="normal"
      >
        <span
          className="Text--context_muted Teaser__location"
        >
          location
        </span>
      </Text>
    </span>
    <Text
      className="Teaser__subTitle"
      context="accent"
      inline={true}
      size="normal"
      title="Organization"
    >
      <span
        className="Text--context_accent Teaser__subTitle"
        title="Organization"
      >
        Organization
      </span>
    </Text>
    <Text
      context="muted"
      inline={true}
      size="normal"
    >
      <span
        className="Text--context_muted"
      >
        details about this job
      </span>
    </Text>
  </p>
</Teaser>
`;
